@@ -53,7 +53,7 @@ public:
     void setRepeatThis(const bool _t);
 
     void addBands(QStringList _bands);
-    void setDefaultBands(); //Defines the default bands for SAT communications: 10m/2m/70cm/23CM only if they exist in the selected bands
+    void setDefaultBands(); //Defines the default bands for SAT communications: 10m/2m/70cm/23CM only if they exist on the selected bands
 
 
 
